--- a/bower.json
+++ b/bower.json
@@ -18,10 +18,9 @@
     "purescript-eff": "^0.1.2",
     "purescript-signal": "^5.2.0",
     "purescript-node-buffer": "^0.2.2",
-    "purescript-generics": "^0.7.2",
-    "purescript-foreign-generic": "^0.3.0",
     "purescript-maybe": "^0.3.5",
-    "purescript-nullable": "^0.2.1"
+    "purescript-nullable": "^0.2.1",
+    "purescript-foreign": "^0.7.2"
   },
   "devDependencies": {
     "purescript-test-unit": "^5.0.0",
